@@ -37,6 +37,8 @@ version 0.9.1 - (Rev 2300) Jan 11, 2009
   - CHG: Merge parameter output and outputExpr and use '!expr' for the expression
         case.
   - NEW: Allow parameter baseOperator::at to take a single number in addition to a list.
+  - NEW: Disallow parameter alias locus to parameter loci in penetrance
+		operators. Allow loci to accept a number.
 
 version 0.9.0 - (Rev 2130) Dec 15, 2008 (tagged, but not publically released)
   - CHG: add population::setSubPopByIndInfo to allow flexible migration.
